<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/detail_page_toolbar" />

    <ImageView
        android:id="@+id/olive_young_logo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/olive_young_logo"
        app:layout_constraintBottom_toTopOf="@+id/layout_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/olive_young_logo">


        <TextView
            android:id="@+id/tv_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/login_page_title"
            android:textColor="@color/dark_grey"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_login_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/login_page_subtitle"
            android:textSize="16sp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_login_page_google_button"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="50dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="25dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/dark_grey"
            app:strokeWidth="0.5dp">

            <TextView
                android:id="@+id/tv_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login_page_google_btn"
                android:textColor="@color/dark_grey"
                android:textSize="14sp" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_login_page_kakao_button"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="25dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/dark_grey"
            app:strokeWidth="0.5dp">

            <TextView
                android:id="@+id/tv_kakao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login_page_kakao_btn"
                android:textColor="@color/dark_grey"
                android:textSize="14sp" />

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_login">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_translation_korean_button"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/green"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="25dp"
            app:cardElevation="0dp"
            app:strokeWidth="0.5dp">

            <TextView
                android:id="@+id/tv_korean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login_page_translation_korean_btn"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
